# agent-moore

./: Makefile  README.md  agent-moore.cabal  cabal.project  flake.nix  overlay.nix
apps/demo/: Main.hs
src/: AgentMoore.hs  Dag.hs  Graph.hs  Machines.hs  OpenAI.hs
src/Machines/: Mealy.hs  MealyM.hs  Moore.hs  MooreM.hs
